...

        let view = UICollectionView(frame: .zero, collectionViewLayout: layout)
        view.backgroundColor = Theme.Color.background
        view.showsVerticalScrollIndicator = false
        view.dataSource = self
        view.delegate = self
        view.accessibilityIdentifier = "carouselTemplateGrid"
        view.register(
            BrowseTemplateCell.self,
            forCellWithReuseIdentifier: BrowseTemplateCell.reuseID)
        view.register(
            CarouselSectionHeaderView.self,
            forSupplementaryViewOfKind: UICollectionView.elementKindSectionHeader,
...
